k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-react-app
  template:
    metadata:
      labels:
        app: my-react-app
    spec:
      containers:
      - name: react-container
        image: ghcr.io/chandan7dec/my-react-app:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-react-app
